# routes/carRoutes.js
@@ -1,0 +1,8 @@
+const { Router } = require('express');
+const { getAllCarsController } = require('../controllers/carController.js');
+
+const carRouter = Router();
+
+carRouter.get('/', getAllCarsController);
+
+module.exports = carRouter;
